Add documentation. Relates to #57